--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,13 @@
-Django==3.2.3
-djangorestframework==3.12.4
-django-cors-headers==3.13.0
+# Django==3.2.3
+# djangorestframework==3.12.4
+# django-cors-headers==3.13.0
+
+Django==4.2.7
+djangorestframework==3.14.0
+django-filter==23.3
+django-cors-headers>=4.0.0
+setuptools>=65.0.0
+
+# setuptools>=65.0.0
+# distlib>=0.3.0
+# importlib-metadata>=4.0; python_version < "3.10"
