--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,14 @@
-# Django==3.2.3
+# Django==3.2.16
 # djangorestframework==3.12.4
 # django-cors-headers==3.13.0
+# psycopg2-binary==2.9.3 
 
 Django==4.2.7
 djangorestframework==3.14.0
 django-filter==23.3
 django-cors-headers>=4.0.0
 setuptools>=65.0.0
+psycopg2-binary==2.9.3 
 
 # setuptools>=65.0.0
 # distlib>=0.3.0
