--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 # Перечень volume
 volumes:
   pg_data:
+  # Новый volume — для статических файлов
+  static:
 
 # Перечень контейнеров
 services:
@@ -22,16 +24,26 @@ services:
     build: ./backend/
     env_file: .env
     # Какие контейнеры нужно запустить до старта этого контейнера:
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
+    # Тут подключаем volume к backend
+    volumes:
+      - static:/backend_static  
   # Имя третьего контейнера. Это контейнер с фронтендом
   frontend:
     env_file: .env
     build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static
   gateway:
     # Сбилдить и запустить образ, 
     # описанный в Dockerfile в папке gateway
     build: ./gateway/
+    env_file: .env
+    # А тут подключаем volume со статикой к gateway
+    volumes:
+      - static:/staticfiles
     # Ключ ports устанавливает
     # перенаправление всех запросов с порта 8000 хоста
     # на порт 80 контейнера
